# dailyhub-backend

./: .dockerignore  .env  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  docker-compose.yml  script.sh  vcpkg-configuration.json  vcpkg.json
.github/workflow/: deploy.yml
.github/workflows/: deploy.yml
Tests/: testing.cpp  testing.hpp
build-line/: CMakeCache.txt  DailyHub_Server  Makefile  cmake_install.cmake
database/: commands.sql  docker-compose.yml  server.env
includes/Dailyhub/: application.hpp  kanban.hpp  routes.hpp  schemas.hpp  users.hpp
includes/Dailyhub/Core/: auth.hpp  database.hpp  dotenv.hpp  error_handler.hpp  hash-password.hpp  httplib.h  server.hpp  utility.hpp
mail/: index.html
postgresql/: Dockerfile
src/: main.cpp
src/Dailyhub/: application.cpp  kanban.cpp  main.cpp  routes.cpp  schemas.cpp  users.cpp
src/Dailyhub/Core/: auth.cpp  database.cpp  dotnev.cpp  error_handler.cpp  hash-password.cpp  server.cpp  utility.cpp
src/core/: auth.cpp  auth.hpp  database.cpp  database.hpp  hash-password.cpp  hash-password.hpp  rest_client.cpp  rest_client.hpp  sendmail.cpp  sendmail.hpp  server.cpp  server.hpp  utility.cpp  utility.hpp
src/dailyhub/: application.cpp  application.hpp  kanban.cpp  kanban.hpp
